--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  min-height: 1vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,4 +35,45 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+ul {
+  margin-block-start: 0px;
+  margin-block-end: 0px;
+  padding-inline-start: 0px;
+  list-style-type: none;
+}
+
+.todo-list {
+  margin: 30px 0 0 0;
+  display: flex;
+  justify-content: center;
+}
+
+.todo-list > ul {
+  text-align: left;
+}
+
+.todo-item {
+  display: flex;
+}
+
+.todo-item-checkbox {
+  margin: 0 8px 0 0;
+}
+
+.todo-app > form {
+  margin: 40px 0 0 0;
+}
+
+.done-item {
+  text-decoration: line-through;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  margin-bottom: 16px;
 }
